Plugin takes first host_ip and guest_ip from synced_folders if supplied

--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -48,3 +48,6 @@ en:
 
       nfs_server_not_installed: |-
         Guest cannot install the required NFS server daemon.
+
+      nfs_guest_clean: |-
+        Something failed while cleaning up NFS shared folders on the guest.
