Refactored guest and host to have their own plugin.rb
Also fixed and tested support for CentOS 6.6 and 7. CentOS 6.6 needed a
firewall setup, so I've added support for configuring a firewall on the
guest using the new guest capability `nfs_setup_firewall`.

Also added commented out CentOS example boxes in the `example_box`
Vagrantfile.

--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -10,6 +10,7 @@ en:
       linux:
         nfs_export: "Preparing to edit /etc/exports on the guest..."
         nfs_server_installing: "Installing nfs server on the guest..."
+        nfs_setup_firewall: "Setup firewall on the guest to allow NFS exports..."
 
     errors:
       nfs_update_exports_failed: |-
