Fixed suspend and resume of an instance.
Now it correctly mounts and unmounts the share for all modes of the VM.

Also abstracted out the IP detection from the PrepareNFSSettings to
being a `provider` capability which makes making other providers much
easier to implement (eg. parallels, docker, etc)

--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -52,3 +52,8 @@ en:
 
       nfs_guest_clean: |-
         Something failed while cleaning up NFS shared folders on the guest.
+
+      provider_missing_nfs_setting_cap: |-
+          Missing provider support in vagrant-nfs_guest plugin for retrieving host and guest IPs.
+
+          Currently only Virtualbox provider is supported.
